fix: :rotating_light: storybook build failures caused by **type** key in `package.json`
- imrpove `Scrollbar` positionings

--- a/src/components/Scrollbar/Scrollbar.module.scss
+++ b/src/components/Scrollbar/Scrollbar.module.scss
@@ -5,6 +5,8 @@
   overflow: hidden;
   position: relative;
   height: 100%;
+  display: flex;
+  column-gap: px-to-rem(2);
 
   .scrollbarContent {
     max-height: 100%;
